# yaki-ika

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-web.yml
data/context/: game_world_context.json
data/corrections/: whisper_corrections.json
data/glossary/: glossary.en.json  glossary.zh-CN.json  glossary.zh-TW.json  glossary_lookup.en.json  glossary_lookup.zh-CN.json  glossary_lookup.zh-TW.json
data/jargon/: community_jargon.json  community_jargon.zh-CN.json  community_jargon.zh-TW.json
docs/: ARCHITECTURE.md  setup-guide-beginner.md  setup-guide-technical.md  web-review-ui.md
scripts/: build_glossary.py  extract_subtitles.py  gather_references.py
src/splatoon_translate/: __init__.py  audio.py  config.py  download.py  embed.py  glossary.py  knowledge.py  ner.py  ocr.py  pipeline.py  quality.py  references.py  subtitle.py  terms.py  transcribe.py  translate.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: 404.html
web/src/: App.tsx  index.css
web/src/components/: export-button.tsx  export-menu.tsx  import-dialog.tsx  layout.tsx  shortcuts-help-dialog.tsx  status-bar.tsx  toolbar.tsx  video-player.tsx  waveform-timeline.tsx  welcome-screen.tsx
web/src/components/subtitle-table/: actions-cell.tsx  filter-bar.tsx  index.ts  segment-row.tsx  subtitle-table.tsx  table-header.tsx  track-cell.tsx
web/src/hooks/: use-active-segment.ts  use-filtered-segments.ts  use-keyboard-shortcuts.ts  use-persistence.ts
web/src/lib/: file-loader.ts  github.ts  keyboard.ts  persistence.ts  srt.ts
web/src/stores/: playback-store.ts  project-store.ts  ui-store.ts
web/src/types/: index.ts
