[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project]
name = "yaki-ika"
version = "0.1.0"
description = "Automated Japanese subtitle translation pipeline for Splatoon 3 videos"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "mecab-python3",
    "unidic-lite",
    "anthropic>=0.40",
    "openai>=1.50",
    "python-dotenv",
    "tqdm",
]

[project.scripts]
yaki-ika = "splatoon_translate.pipeline:main"

[tool.uv.build-backend]
module-root = "src"
module-name = "splatoon_translate"
